gotta fix header link alignment, and also the wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,11 @@ body {
     /* style="padding-top: 0%; padding-bottom: 0%" */
 }
 
+/* .navbar-nav, .mr-auto {
+    margin-right: 0%;
+    margin-left: auto;
+} */
+
 .navbar-light .navbar-brand {
     /* style="color: #ffffff; background-color: #4aaaa5; font-family: 'Georgia', Times, Times New Roman, serif; padding: 1%; font-size: 24px" */
     color: #ffffff;
